2011-11-03  Ozkan Sezer  <sezeroz@gmail.com>

	* ntdef.h (FORCEINLINE): Sync the definition to the winnt.h version.

2011-10-30  Stefan Sundin  <recover89@gmail.com>

	* winuser.h: (SPI_GETAUDIODESCRIPTION): New.
	(SPI_GETCLEARTYPE): New.
	(SPI_GETCLIENTAREAANIMATION): New.
	(SPI_GETDISABLEOVERLAPPEDCONTENT): New.
	(SPI_GETDOCKMOVING): New.
	(SPI_GETDRAGFROMMAXIMIZE): New.
	(SPI_GETHUNGAPPTIMEOUT): New.
	(SPI_GETMESSAGEDURATION): New.
	(SPI_GETMOUSEDOCKTHRESHOLD): New.
	(SPI_GETMOUSEDRAGOUTTHRESHOLD): New.
	(SPI_GETMOUSESIDEMOVETHRESHOLD): New.
	(SPI_GETPENDOCKTHRESHOLD): New.
	(SPI_GETPENDRAGOUTTHRESHOLD): New.
	(SPI_GETPENSIDEMOVETHRESHOLD): New.
	(SPI_GETSCREENSAVESECURE): New.
	(SPI_GETSNAPSIZING): New.
	(SPI_GETWAITTOKILLSERVICETIMEOUT): New.
	(SPI_GETWAITTOKILLTIMEOUT): New.
	(SPI_GETWHEELSCROLLCHARS): New.
	(SPI_GETWINARRANGING): New.
	(SPI_SETAUDIODESCRIPTION): New.
	(SPI_SETCLEARTYPE): New.
	(SPI_SETCLIENTAREAANIMATION): New.
	(SPI_SETDISABLEOVERLAPPEDCONTENT): New.
	(SPI_SETDOCKMOVING): New.
	(SPI_SETDRAGFROMMAXIMIZE): New.
	(SPI_SETHUNGAPPTIMEOUT): New.
	(SPI_SETMESSAGEDURATION): New.
	(SPI_SETMOUSEDOCKTHRESHOLD): New.
	(SPI_SETMOUSEDRAGOUTTHRESHOLD): New.
	(SPI_SETMOUSESIDEMOVETHRESHOLD): New.
	(SPI_SETPENDOCKTHRESHOLD): New.
	(SPI_SETPENDRAGOUTTHRESHOLD): New.
	(SPI_SETPENSIDEMOVETHRESHOLD): New.
	(SPI_SETSCREENSAVESECURE): New.
	(SPI_SETWAITTOKILLSERVICETIMEOUT): New.
	(SPI_SETWAITTOKILLTIMEOUT): New.
	(SPI_SETWHEELSCROLLCHARS): New.
	(SPI_SETWINARRANGING): New.

2011-10-19  Ozkan Sezer  <sezeroz@gmail.com>

	* imagehlp.h: Fixed misplaced extern "C" {} braces which used to break
	C_ASSERTs. (bug #3425478.)

2011-09-26  Ozkan Sezer  <sezeroz@gmail.com>

	* sdkddkver.h: Whitespace tidy-up.  Add our standart license header.
	(_WIN32_WINNT): Define default value as _WIN32_WINNT_WS03, i.e. 0x0502,
	which is what we had been defining in windows.h until this day.
	(NTDDI_VERSION): Define default value as NTDDI_WS03, i.e. 0x05020000,